# sod_warcraft_logs_data_models

./: .gitignore  README.md  Taskfile.yml  main.py  mypareq.parquet  pyproject.toml
db/data/: report_2jD6QLA1XVf9vptq_data_20240331_2259.json  report_4Xr2gcKVJdn86QD3_data_20240331_2259.json  report_Q4F3yPBXVxH8RtjN_data_20240331_2259.json  report_VCHbQWYMA4xZLjKT_data_20240331_2259.json  report_ZN6kX7AcWfFmBRQD_data_20240331_2259.json  report_c2ZfK7pdnwX1yLgB_data_20240331_2259.json  report_hpJMBxRgTa9Pzk7t_data_20240331_2259.json  report_k6MJWpcjyqY2FmHQ_data_20240331_2259.json  report_z6X7cBV2wYGC9NZJ_data_20240331_2259.json
db/scripts/: create_db_insert_data.py
extract/: warcraft_logs.py
load/: local_uploading.py
saved_reports/: report_D3NZCKFv6jzRdrBy_data_20240331_2137.json
transform/: duckdb_json_load.sql
transform/data/: report_2QmNGXwgKrtd3Ffk_data_20240331_2259.json  report_AghjcQ1xpzqBZnm2_data_20240331_2259.json  report_FPTXcqmkd9Kv7Wg4_data_20240331_2259.json  report_GKXHC3N1VWMfqJZd_data_20240331_2259.json  report_JzmVkp46HYqR2L9A_data_20240331_2259.json  report_L2cQKgqYyxWVM718_data_20240331_2300.json  report_VNzLm3xhPZGpX2Wq_data_20240331_2259.json  report_Vgrd8yXDNpP7B2Wz_data_20240331_2259.json  report_VwRzpM9aBK1cfyHv_data_20240331_2300.json  report_XrbgGMhqjDzQApnT_data_20240331_2259.json  report_dV8gf6cG1v9Kbpay_data_20240331_2300.json  report_ga82zbjYHVCNTD7m_data_20240331_2259.json  report_h2APtzJg6mZVWBvN_data_20240331_2259.json  report_hWPTpYJGaCNmQnqd_data_20240331_2300.json  (+3 more)
transform/wcl_dbt/: .dev.duckdb  (+7 more)
vizualization/: app.py
(+62 files in other folders)
