[tool.poetry]
name = "sod-warcraft-logs-data-models"
version = "0.1.0"
description = "Project to preform ELT on Season of Discovery World of Warcraft data"
authors = ["Lior Kaufman <lior@sightly.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.1"
requests = "2.31.0"
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
dbt-duckdb = "^1.7.3"
dbt-postgres = "^1.7.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
